package model.game.player.tactic;

public interface Tactic {
}
